artifacthub/library/pod-security-policy/forbidden-sysctls/1.2.1/samples/psp-forbidden-sysctls/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-forbidden-sysctls-allowed
  labels:
    app: nginx-forbidden-sysctls
spec:
  containers:
    - name: nginx
      image: nginx
  securityContext:
    sysctls:
      - name: net.ipv4.ip_local_port_range
        value: "1024 65535"
