artifacthub/library/pod-security-policy/forbidden-sysctls/1.2.1/samples/psp-forbidden-sysctls/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPForbiddenSysctls
metadata:
  name: psp-forbidden-sysctls
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedSysctls:
    - kernel.shm_rmid_forced
    - net.ipv4.ip_local_port_range
    - net.ipv4.ip_unprivileged_port_start
    - net.ipv4.tcp_syncookies
    - net.ipv4.ping_group_range
    - net.ipv4.ip_local_reserved_ports
    - net.ipv4.tcp_keepalive_time
    - net.ipv4.tcp_fin_timeout
    - net.ipv4.tcp_keepalive_intvl
    - net.ipv4.tcp_keepalive_probes
